--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h2 style="text-align: center">Player data in FIFA 19</h2>
     <div id="root"></div>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
